[problem2]Add and fix some test&Implement graphs and trees