@@ -3,10 +3,8 @@ package edu.postech.csed332.homework2;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Optional;
-import java.util.Set;
-import java.util.SortedMap;
-import java.util.TreeMap;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * An implementation of Tree, where each vertex has a reference to its parent node but
@@ -50,74 +48,146 @@ public class ParentPointerTree<N extends Comparable<N>> implements MutableTree<N
 
     @Override
     public int getDepth(@NotNull N vertex) {
-        // TODO: implement this
-        return 0;
+        if(containsVertex(vertex)) {
+            return nodeMap.get(vertex).depth();
+        }
+        else {
+            throw new IllegalArgumentException();
+        }
     }
 
     @Override
     public int getHeight() {
         // TODO: implement this
-        return 0;
+        return Collections.max(this.nodeMap.values().stream().map(Node::depth).toList());
     }
 
     @Override
     public @NotNull Set<N> getChildren(@NotNull N vertex) {
         // TODO: implement this
-        return Set.of();
+        if(containsVertex(vertex)) {
+            return this.nodeMap.entrySet().stream()
+                    .filter((entry) -> entry.getValue().parent() == vertex).map(Map.Entry::getKey)
+                    .collect(Collectors.toUnmodifiableSet());
+        }
+        else {
+            return Set.of();
+        }
     }
 
     @Override
     public @NotNull Optional<N> getParent(@NotNull N vertex) {
         // TODO: implement this
-        return Optional.empty();
+        if(containsVertex(vertex)) {
+            return Optional.ofNullable(this.nodeMap.get(vertex).parent());
+        }
+        else {
+            return Optional.empty();
+        }
     }
 
     @Override
     public boolean containsVertex(@NotNull N vertex) {
         // TODO: implement this
-        return false;
+        return this.nodeMap.containsKey(vertex);
+    }
+
+    @Override
+    public boolean addVertex(@NotNull N vertex) {
+        if(containsVertex(vertex)) {
+            return false;
+        }
+        else {
+            this.nodeMap.put(vertex, new Node<>(null, 0));
+            return true;
+        }
     }
 
     @Override
     public boolean removeVertex(@NotNull N vertex) {
         // TODO: implement this
-        return false;
+        if(getRoot() == vertex) {
+            throw new IllegalArgumentException();
+        }
+        else if(containsVertex(vertex)) {
+            // using ~.toList() in order to prevent concurrent modifying exception
+            this.nodeMap.entrySet().stream()
+                    .filter((entry) -> entry.getValue().parent() == vertex).map(Map.Entry::getKey)
+                    .toList().forEach(this::removeVertex);
+            this.nodeMap.remove(vertex);
+            return true;
+        }
+        else {
+            return false;
+        }
     }
 
     @Override
     public boolean containsEdge(@NotNull N source, @NotNull N target) {
         // TODO: implement this
-        return false;
+        if(containsVertex(source) && containsVertex(target)) {
+            return this.nodeMap.get(source).parent() == target || this.nodeMap.get(target).parent() == source;
+        }
+        else {
+            return false;
+        }
     }
 
     @Override
     public boolean addEdge(@NotNull N source, @NotNull N target) {
         // TODO: implement this
-        return false;
+        if(containsVertex(source) && !containsVertex(target)) {
+            this.nodeMap.put(target, new Node<>(source, getDepth(source) + 1));
+            return true;
+        }
+        else {
+            return false;
+        }
     }
 
     @Override
     public boolean removeEdge(@NotNull N source, @NotNull N target) {
         // TODO: implement this
-        return false;
+        if(containsEdge(source, target)) {
+            if(getParent(target).equals(Optional.of(source))) {
+                removeVertex(target);
+            }
+            else {
+                removeVertex(source);
+            }
+            return true;
+        }
+        else {
+            return false;
+        }
     }
 
     @Override
     public @NotNull Set<N> getNeighborhood(@NotNull N vertex) {
         // TODO: implement this
-        return Set.of();
+        if(containsVertex(vertex)) {
+            return this.nodeMap.keySet().stream()
+                    .filter((node) -> this.nodeMap.get(node).parent() == vertex || this.nodeMap.get(vertex).parent() == node)
+                    .collect(Collectors.toUnmodifiableSet());
+        }
+        else {
+            return Set.of();
+        }
     }
 
     @Override
     public @NotNull Set<N> getVertices() {
         // TODO: implement this
-        return Set.of();
+        return Collections.unmodifiableSet(this.nodeMap.keySet());
     }
 
     @Override
     public @NotNull Set<Edge<N>> getEdges() {
         // TODO: implement this
-        return Set.of();
+        return this.nodeMap.keySet().stream()
+                .map((node) -> getNeighborhood(node).stream()
+                        .map((neighbor) -> List.of(new Edge<>(node, neighbor), new Edge<>(neighbor, node)))
+                .flatMap(List::stream).toList()).flatMap(List::stream).collect(Collectors.toUnmodifiableSet());
     }
 
     /**
@@ -127,7 +197,7 @@ public class ParentPointerTree<N extends Comparable<N>> implements MutableTree<N
      */
     boolean checkInv() {
         // TODO: implement this
-        return false;
+        return findReachableVertices(getRoot()).equals(getVertices());
     }
 
 }
